centralização de caixa

--- a/07-Background Images/fundo006.html
+++ b/07-Background Images/fundo006.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo Fixo de Tela</title>
     <style>
         body{
             height: 100vh;
@@ -12,7 +12,16 @@
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center top;
             background-repeat: no-repeat;
-            background-size: cover; /* implementar no site*/
+
+            /* background proporcional*/
+            background-size: cover; /* cobrir */ /* implementar no site*/
+
+            /* Preencher fundo fixadamente */
+            background-attachment: fixed; /* ou scroll */
+
+            /* Shorthand background*/
+            /* color image position repeat [size] attachment*/
+            background: black url(imagens/wallpaper002.jpg) center top no-repeat cover fixed;
         }
 
         main{
@@ -26,6 +35,57 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. In dolorem at aspernatur quisquam deleniti quasi laudantium quia autem consequatur ea quo, dicta molestias maxime sapiente minima inventore excepturi adipisci exercitationem.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. In dolorem at aspernatur quisquam deleniti quasi laudantium quia autem consequatur ea quo, dicta molestias maxime sapiente minima inventore excepturi adipisci exercitationem.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. In dolorem at aspernatur quisquam deleniti quasi laudantium quia autem consequatur ea quo, dicta molestias maxime sapiente minima inventore excepturi adipisci exercitationem.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. In dolorem at aspernatur quisquam deleniti quasi laudantium quia autem consequatur ea quo, dicta molestias maxime sapiente minima inventore excepturi adipisci exercitationem.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. In dolorem at aspernatur quisquam deleniti quasi laudantium quia autem consequatur ea quo, dicta molestias maxime sapiente minima inventore excepturi adipisci exercitationem.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. In dolorem at aspernatur quisquam deleniti quasi laudantium quia autem consequatur ea quo, dicta molestias maxime sapiente minima inventore excepturi adipisci exercitationem.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. In dolorem at aspernatur quisquam deleniti quasi laudantium quia autem consequatur ea quo, dicta molestias maxime sapiente minima inventore excepturi adipisci exercitationem.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. In dolorem at aspernatur quisquam deleniti quasi laudantium quia autem consequatur ea quo, dicta molestias maxime sapiente minima inventore excepturi adipisci exercitationem.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. In dolorem at aspernatur quisquam deleniti quasi laudantium quia autem consequatur ea quo, dicta molestias maxime sapiente minima inventore excepturi adipisci exercitationem.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. In dolorem at aspernatur quisquam deleniti quasi laudantium quia autem consequatur ea quo, dicta molestias maxime sapiente minima inventore excepturi adipisci exercitationem.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. In dolorem at aspernatur quisquam deleniti quasi laudantium quia autem consequatur ea quo, dicta molestias maxime sapiente minima inventore excepturi adipisci exercitationem.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. In dolorem at aspernatur quisquam deleniti quasi laudantium quia autem consequatur ea quo, dicta molestias maxime sapiente minima inventore excepturi adipisci exercitationem.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. In dolorem at aspernatur quisquam deleniti quasi laudantium quia autem consequatur ea quo, dicta molestias maxime sapiente minima inventore excepturi adipisci exercitationem.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. In dolorem at aspernatur quisquam deleniti quasi laudantium quia autem consequatur ea quo, dicta molestias maxime sapiente minima inventore excepturi adipisci exercitationem.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. In dolorem at aspernatur quisquam deleniti quasi laudantium quia autem consequatur ea quo, dicta molestias maxime sapiente minima inventore excepturi adipisci exercitationem.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. In dolorem at aspernatur quisquam deleniti quasi laudantium quia autem consequatur ea quo, dicta molestias maxime sapiente minima inventore excepturi adipisci exercitationem.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. In dolorem at aspernatur quisquam deleniti quasi laudantium quia autem consequatur ea quo, dicta molestias maxime sapiente minima inventore excepturi adipisci exercitationem.
+        </p>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. In dolorem at aspernatur quisquam deleniti quasi laudantium quia autem consequatur ea quo, dicta molestias maxime sapiente minima inventore excepturi adipisci exercitationem.
         </p>
