--- a/09-Tabelas/index.html
+++ b/09-Tabelas/index.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        table{ width: 400px; height: 150px; border-collapse: collapse;}
-        tr.linha{ background-color: lightgrey; }
-        td{ border: 1px solid black; text-align: center; padding:8px;}
+        table{ width: 400px; height: 400px; border-collapse: collapse;}
+        td{ border: 1px solid black; text-align: center; padding:8px; vertical-align: top;}
     </style>
 </head>
 <body>
@@ -25,7 +24,7 @@
             <td>B1</td>
             <td>C1</td>
         </tr>
-        <tr class="linha">
+        <tr>
             <td>A2</td>
             <td>B2</td>
             <td>C2</td>
@@ -35,7 +34,7 @@
             <td>B3</td>
             <td>C3</td>
         </tr>
-        <tr class="linha">
+        <tr>
             <td>A4</td>
             <td>B4</td>
             <td>C4</td>
